# pacgate

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  OVERVIEW.md  PROMPT_HISTORY.md  README.md  REQUIREMENTS.md  requirements.txt
docs/: COMPARISON.md  README.md  RESEARCH.md  WHY_PACGATE.md  WIDE_PARSER_ROADMAP.md  WORKSHOPS.md
rtl/: axi_lite_csr.v  axi_stream_adapter.v  axis_512_to_8.v  axis_8_to_512.v  conntrack_table.v  frame_parser.v  int_metadata.v  packet_filter_axi_top.v  packet_rewrite.v  ptp_clock.v  rate_limiter.v  rss_indirection.v  rss_toeplitz.v  rule_counters.v  store_forward_fifo.v
rules/: schema.yaml
simulator-app/: README.md  server.py
src/: benchmark.rs  cocotb_gen.rs  formal_gen.rs  iptables_import.rs  loader.rs  main.rs  mcy_gen.rs  mermaid.rs  model.rs  mutation.rs  optimize.rs  p4_gen.rs  p4_import.rs  pcap.rs  pcap_analyze.rs  pcap_gen.rs  pcap_writer.rs  reachability.rs  rust_gen.rs  scenario.rs  simulator.rs  synth_gen.rs  tcpdump_import.rs  templates_lib.rs  trace.rs  verilog_gen.rs  wireshark_import.rs
synth/: artix7.xdc  synth_yosys.ys
templates/: assertions.sv.tera  axis_8_to_wide.v.tera  axis_wide_to_8.v.tera  byte_capture.v.tera  coverage_report.html.tera  decision_logic.v.tera  diff_report.html.tera  egress_lut.v.tera  flow_table.v.tera  formal.sby.tera  frame_parser_wide.v.tera  int_lut.v.tera  mcy.cfg.tera  p4_program.p4.tera  pacgate_corundum_app.v.tera  pacgate_opennic_250.v.tera  packet_filter_axi_top.v.tera  packet_filter_dynamic_top.v.tera  packet_filter_multiport_top.v.tera  packet_filter_top.v.tera  synth_xdc.tera  (+24 more)
(+112 files in other folders)
