[package]
name = "pacgate"
version = "0.2.0"
edition = "2021"
description = "FPGA Layer 2 Packet Filter Gate — YAML rules to Verilog RTL + cocotb verification"

[[bin]]
name = "pacgate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tera = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
